# fastapi2

fastapi2/: .gitignore  alembic.ini  main.py  pyproject.toml
fastapi2/app/: auth.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
fastapi2/migrations/: env.py
fastapi2/migrations/versions/: 034e6c1c32f5_.py  371ec1122f3e_.py  5592a9a1c5d2_.py  5c6506a870af_.py  6379dedf0777_.py  9c1583e225cd_.py
fastapi2/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
fastapi2/sql_app_demo/: check_auth.py  crud.py  database.py  main.py  models.py  redis_connetion.py  redis_pubsub.py  schemas.py
fastapi2/sql_app_demo/api/: auth.py  course.py  relation.py  student.py  teacher.py
