[tool.poetry]
name = "fastapi2"
version = "0.1.0"
description = ""
authors = ["Izazur Rahman Shafin <shafin97@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.9"
pyjwt = "^2.9.0"
alembic = "^1.13.2"
redis = "^5.0.8"
aioredis = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
